--- a/www/main.html
+++ b/www/main.html
@@ -17,7 +17,7 @@
       margin: 0px;
       overflow: hidden;
       background: url(bg.png) no-repeat;
-      background-size: cover;
+      background-size:contain;
       -webkit-touch-callout: none;
       user-select: none;
       box-sizing: border-box;
@@ -73,11 +73,7 @@
   </div>
   <div style="margin:10px">
   <H4 id="tip">刷CloudCampus不花一分钱!</H4>
-  <H4>当前版本:1.0.0 甜水巷花魁琴梨梨 出品</H4>
-  <br>
-  <br>
-  <br>
-  <br>
+  <H4>当前版本:1.0.1 甜水巷花魁琴梨梨 出品</H4>
   <br>
   <br>
   <H4 id="status">等待加载</H4>
@@ -85,12 +81,16 @@
     <div class="mdc-button__ripple"></div>
     <span class="mdc-button__label">重新登录</span>
   </button>
+  <button onclick="loginPage2();" class="mdc-button foo-button">
+    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__label">备用登录</span>
+  </button>
   <button onclick="fire();" id="fire" style="display: none;" class="mdc-button foo-button">
     <div class="mdc-button__ripple"></div>
     <span class="mdc-button__label">开炮!</span>
   </button>
 </div>
-  <iframe style="width:100%;height:60%;" id="mainFrame"></iframe>
+  <iframe style="width:100%;height:60%;border:none" id="mainFrame"></iframe>
   <script>
     //初始化变量
     var url;
@@ -110,6 +110,9 @@
     }
     function loginPage() {
       document.getElementById("mainFrame").src = "https://www.cloudcampus.com.cn/login/";
+    }
+    function loginPage2() {
+      document.getElementById("mainFrame").src = "https://www.cloudcampus.com.au/login/";
     }
     loginPage();
     document.getElementById("mainFrame").onload = function () {
